# labelfree

./: .gitignore  .pre-commit-config.yaml  1.0-explore-and-preprocess-data.ipynb  2.0a-supervised-learning-baseline-change.ipynb  2.0b-supervised-learning-baseline-image.ipynb  3.0-parabola-loss-implementation.ipynb  3.1-parabola-loss-implementation.ipynb  3.2-parabola-loss-implementation.ipynb  4.0-labelfree-change.ipynb  README.md  environment.yml  get-data.sh  prep-data.py  pyproject.toml
